--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
         <li>
           <a class="main-header__sm-menu-link main-header__sm-menu-link--4" name="contact">Contact</a>
         </li>
+        <li>
+          <a href="https://drive.google.com/uc?export=download&id=1dU_oSX8nskRttUD7ti8f162ASrkKuvzI" class="main-header__sm-menu-link main-header__sm-menu-link--5 download-cv-sm" name="download-cv">Download CV</a>
+        </li>
       </ul>
     </div>
-    <!-- <button class="btn btn-theme btn-sm">Download CV</button> -->
+    <a href="https://drive.google.com/uc?export=download&id=1dU_oSX8nskRttUD7ti8f162ASrkKuvzI" class="btn btn-theme btn-sm download-cv">Download CV</a>
   </header>
 
 
@@ -87,8 +90,10 @@
             I'm Bradly Lewis! A Software Developer Dedicated To Building Innovative Web Apps And Websites That Make A Meaningful Impact On The World
           </span>
         </h1>
-        <button onclick="scrollToSection('projects')" class="btn btn-theme home-hero__btn-theme">Projects</button>
-        <button onclick="scrollToSection('contact')" class="btn btn-inv home-hero__btn-theme">Contact</button>
+        <div class="container">
+          <button onclick="scrollToSection('projects')" class="btn btn-theme home-hero__btn-theme">Projects</button>
+          <button onclick="scrollToSection('contact')" class="btn btn-inv home-hero__btn-theme">Contact</button>
+        </div>
       </div>
     </div>
   </section>
@@ -124,7 +129,6 @@
                 trying to find ways to be more organized and I'm a people person. 
               </span>
             </p>
-            <button class="btn btn-theme about__btn-theme">Projects</button>
           </div>
           <div class="about__skill-info">
             <h3 class="heading-quaternary about__heading-quaternary">
